--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Crudbase",
     "version": "1.0.0-alpha",
     "keywords": [
-        "db",
+        "database",
         "yii2"
     ],
     "homepage": "https://github.com/logicent/crudbase",
